# dcue

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  album.cpp  album.h  appkey.h.in  cue.cpp  cue.h  dcue.cpp  dcue.h  defs.h  discogs.cpp  discogs.h  filename_utility.cpp  filename_utility.h  gcovr.cfg  http.cpp  http.h  http_curl.cpp  http_curl.h  http_types.h  http_wininet.cpp  http_wininet.h  index.html  json_parser.cpp  json_parser.h  main.cpp  make  multitrack_strategy.cpp  multitrack_strategy.h  naming.cpp  naming.h  socket.cpp  socket.h  string_utility.cpp  string_utility.h  support_types.cpp  (+2 more)
.github/: lnx_build.sh  lnx_build_and_test.sh  lnx_official.sh  win_build.bat  win_official.bat
.github/workflows/: ccpp_win.yml  lnx_build_and_test.yml  official-lnx.yml  official-win.yml  test.yml  win_build_and_test.yml
test/: cue2cpp.pl  main.cpp  run.sh  test_cue_generation.cpp
test/data/: m218406.cpp  m218406.json  r1.cpp  r1.json  r121788.cpp  r121788.json  r13835.cpp  r13835.json  r3151795.cpp  r3151795.json  r3446241.json  r374278.cpp  r374278.json  r5984091.json  r9922074.cpp  r9922074.json
test/data/m218406/: m218406-1.cue  m218406-2.cue  m218406-3.cue
test/data/r1/: r1.cue
test/data/r121788/: r121788.cue
test/data/r13835/: r13835-1.cue  r13835-2.cue
test/data/r3151795/: r3151795-1.cue  r3151795-2.cue  r3151795-3.cue  r3151795-4.cue
test/data/r374278/: r374278.cue
test/data/r9922074/: r9922074.cue
test/gtest/: test_album.cpp  test_multitrack.cpp
